--- a/csgo_client.vcxproj.filters
+++ b/csgo_client.vcxproj.filters
@@ -150,6 +150,9 @@
     <ClInclude Include="Interface\IGlobalVars.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Interface\ivmodelinfo.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
